<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxHeight="400dp"
    android:minWidth="335dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape">

    <TextView
        android:id="@+id/dialogIssueReturn_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/colorPrimary"
        />

    <ScrollView
        android:id="@+id/actDetails_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_transaction_type" />

                <TextView
                    android:id="@+id/invHistory_trans_type"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_transaction_date" />

                <TextView
                    android:id="@+id/invHistory_trans_date"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_quantity" />

                <TextView
                    android:id="@+id/invHistory_quantity"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_workorder" />

                <TextView
                    android:id="@+id/invHistory_workorder"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_serialnumber_2" />

                <TextView
                    android:id="@+id/invHistory_serialnum"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_aircraft_registration" />

                <TextView
                    android:id="@+id/invHistory_registration"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_issue_to" />

                <TextView
                    android:id="@+id/invHistory_issueTo"
                    style="@style/Inventory_TextDetail"
                    android:maxLines="3"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_storeroom" />
                <!--inventory location-->

                <TextView
                    android:id="@+id/invHistory_storeroom"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_batch" />

                <TextView
                    android:id="@+id/invHistory_batch"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_entered_by" />

                <TextView
                    android:id="@+id/invHistory_enteredby"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>




        </LinearLayout>
    </ScrollView>



    <Button
        android:id="@+id/diagHistory_cancelButton"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:text="@string/text_CANCEL"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_shape"

        />


</LinearLayout>