<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxHeight="400dp"
    android:minWidth="335dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape"
    >

    <TextView
        android:id="@+id/dialogHistory_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/colorPrimary"
        />

    <ScrollView
        android:id="@+id/actDetails_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_receipt_insp" />

                <TextView
                    android:id="@+id/invHistory_receipt_insp_number"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_line" />

                <TextView
                    android:id="@+id/invHistory_line"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_receipt_date" />

                <TextView
                    android:id="@+id/invHistory_receiptDate"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_insp_status" />

                <TextView
                    android:id="@+id/invHistory_inspStatus"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_serialnumber_2" />

                <TextView
                    android:id="@+id/invHistory_serialNR"
                    style="@style/Inventory_TextDetail"
                    android:maxLines="3"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_qty_serviceable" />

                <TextView
                    android:id="@+id/invHistory_qtyServiceable"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_qty_quarantined" />

                <TextView
                    android:id="@+id/invHistory_qtyQuarantined"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_qty_returned" />

                <TextView
                    android:id="@+id/invHistory_qtyReturned"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/Inventory_LabelDetail"
                    android:text="@string/label_qty_scrapped" />

                <TextView
                    android:id="@+id/invHistory_qtyScrapped"
                    style="@style/Inventory_TextDetail" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/diagHistory_cancelButton"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_gravity="center"
        android:text="@string/text_CANCEL"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_shape"
        />


</LinearLayout>